--- a/CellularAutomata/styles.css
+++ b/CellularAutomata/styles.css
@@ -1,6 +1,16 @@
 .flex {
         display:flex;
         text-align: center;
+
+}
+
+.options{
+    padding: 1rem;
+}
+
+.checkbox-container{
+    display: flex;
+    justify-content: space-between;
 }
 
 .vertical {
